# Pushdown-Automata

./: CMakeLists.txt  main.cpp  main.cpp.autosave
include/: AutomataTape.h  automatastack.h  automatastate.h  automatatape.h  pushdownautomata.h  transitionfunction.h  utilities.h
inputs/: .APf-2.txt.kate-swp  APf-2.txt  APf.txt
src/: automatastack.cpp  automatastate.cpp  automatatape.cpp  pushdownautomata.cpp  transitionfunction.cpp  utilities.cpp
test/: testautomatastack.cpp  testautomatastate.cpp  testautomatatape.cpp  testpushdownautomata.cpp  testtransitionfunction.cpp  testutilities.cpp
